# edge-ai-libraries

microservices/document-ingestion/pgvector/app/: url.py
microservices/model-download/: README.md  pyproject.toml
microservices/model-download/docs/user-guide/: running-tests.md
microservices/model-download/tests/: conftest.py
microservices/model-download/tests/unit/: test_openvino_plugin.py  test_ultralytics_plugin.py
microservices/multilevel-video-understanding/docs/user-guide/: get-started.md
microservices/multimodal-embedding-serving/docs/user-guide/: get-started.md
sample-applications/chat-question-and-answer-core/chart/: Chart.yaml
sample-applications/chat-question-and-answer/docs/user-guide/: deploy-with-helm.md
sample-applications/document-summarization/chart/: Chart.yaml
sample-applications/document-summarization/chart/subchart/backend/docsum-api/: Chart.yaml
sample-applications/video-search-and-summarization/chart/subchart/video-ingestion/templates/: video-ingestion-configmap.yaml
sample-applications/video-search-and-summarization/docs/user-guide/: deploy-with-helm.md
